--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,9 @@
         <th>
           E-mail:
         </th>
+        <th>
+          Password:
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -17,7 +20,10 @@
           <%= user.username %>
         </td>
         <td>
-        <%= user.email %>
+          <%= user.email %>
+        </td>
+        <td>
+          <%= user.password_digest %>
         </td>
       </tr>
       <% end %>
