--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,20 @@
 <div class="container text-center">
   <h1>Pages#index</h1>
   <p>Find me in app/views/pages/index.html.erb</p>
-  <% if current_user %>
+  <% if logged_in? %>
     <h2>Logged-in User:</h2>
     <hr>
     <%= current_user.username %><br>
-    <%= current_user.email %>
+    <%= current_user.email %><br>
+  <% else %>
+    <h2>Welcome, stranger!</h2><br>
+      <div class="row">
+        <div class="col col-lg-1 col-lg-offset-5">
+          <%= link_to 'Log in', login_path %>
+        </div>
+        <div class="col col-lg-1">
+          <%= link_to 'Sign up', signup_path %>
+        </div>
+      </div>
   <% end %>
 </div>
