Add log_out helper to SessionsHelper
Added the ability to log out as a current user by implementing log_out
method in the SessionsHelper, which calls session.delete(:user_id) and
sets the current_user to nil.
In addition, added the log out link on the index page for the currently
logged in users.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,6 +6,7 @@
     <hr>
     <%= current_user.username %><br>
     <%= current_user.email %><br>
+    <%= link_to 'Log out', logout_path, method: :delete %>
   <% else %>
     <h2>Welcome, stranger!</h2><br>
       <div class="row">
