--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,6 +7,7 @@
     <%= current_user.username %><br>
     <%= current_user.email %><br>
     <%= link_to 'Log out', logout_path, method: :delete %>
+    <%= link_to 'Edit profile', edit_user_path(current_user) %>
   <% else %>
     <h2>Welcome, stranger!</h2><br>
       <div class="row">
