--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<% provide(:button_text, 'Sign up') %>
+<% provide(:button_text, 'Save changes') %>
 <div class="container">
   <div class="row text-center">
-    <h2>Creating new User</h2>
+    <h2>Editing user <%= @user.username %> </h2>
     <hr>
     <%= render partial: 'shared/user_form', user: @user %>
   </div>
