--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,32 @@
-<table>
-  <thead>
-    <tr>
-      <th>
-        Username:
-      </th>
-      <th>
-        E-mail:
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-    <tr>
-      <td>
-        <%= user.username %>
-      </td>
-      <td>
-      <%= user.email %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container">
+  <table>
+    <thead>
+      <tr>
+        <th>
+          Username:
+        </th>
+        <th>
+          E-mail:
+        </th>
+        <th>
+          Password:
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+      <tr>
+        <td>
+          <%= user.username %>
+        </td>
+        <td>
+          <%= user.email %>
+        </td>
+        <td>
+          <%= user.password_digest %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
