--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,10 @@
-<%= form_for @user do |f| %>
-  <p>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
-  </p>
-
-  <p>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </p>
-
-  <p>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </p>
-  <p>
-    <%= f.submit 'Sign up' %>
-  </p>
-<% end %> 
+<% provide(:button_text, 'Sign Up') %>
+<div class="container">
+  <div class="row text-center">
+    <div class="offset-lg-4">
+      <h2>Creating New User</h2>
+      <hr>
+      <%= render 'user_form' %>
+    </div>
+  </div>
+</div>
