--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,12 @@
   <body>
     <div class="container">
       <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
+        <div class="alert alert-<%= key %>">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <i class="fa fa-times"></i>
+          </button>
+          <%= value %>
+        </div>
       <% end %>
       <%= render 'shared/user_bar' %>
       <%= yield %>
