--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -1,49 +1,56 @@
-<div class="container">
-  <hr>
-  <div class="row">
-    <div class="col col-lg-12">
-      <h2>Viewing bet: <%= @bet.id %></h2>
+<hr>
+<div class="row">
+  <div class="col col-lg-6 offset-lg-3">
+    <div class="card text-center">
+      <div class="card-header text-muted">
+        <h4><%= @bet.creator.username %></h4>
+      </div>
+      <div class="class-block">
+        <p><h5 class="card-text"><%= @bet.bet %></h5></p>
+      </div>
+      <div class="card-footer text-danger">
+        Expires on: <%= @bet.expires_at.strftime('%A, %B %d %Y, %l:%M %P') %>
+      </div>
     </div>
   </div>
-  <hr>
-  <div class="row">
-    <div class="col col-lg-4">
-      <h4>ID</h4>
-    </div>
-    <div class="col col-lg-8">
-      <h4><%= @bet.id %></h4>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col col-lg-4">
-      <h4>Status</h4>
-    </div>
-    <div class="col col-lg-8">
-      <h4><%= @bet.status %></h4>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col col-lg-4">
-      <h4>Creator ID</h4>
-    </div>
-    <div class="col col-lg-8">
-      <h4><%= @bet.creator_id %></h4>
+</div>
+
+<hr>
+<div class="row">
+  <div class="col col-lg-6 offset-lg-3">
+    <div class="card">
+      <div class="card-header text-muted">
+        <div class="row">
+          <div class="col col-lg-4">User</div>
+          <div class="col col-lg-4">Option ID</div>
+          <div class="col col-lg-4">Amount</div>
+        </div>
+      </div>
+      <div class="card-block">
+        <table class="table table-hover">
+          <%= render @bet.user_bets %>
+        </table>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col col-lg-4">
-      <h4>Expires at</h4>
-    </div>
-    <div class="col col-lg-8">
-      <h4><%= @bet.expires_at %></h4>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col col-lg-4">
-      <h4>Text</h4>
-    </div>
-    <div class="col col-lg-8">
-      <h4><%= @bet.bet %></h4>
+</div>
+
+<hr>
+<div class="row">
+  <div class="col col-lg-6 offset-lg-3">
+    <div class="card">
+      <div class="card-header text-muted">
+        <div class="row">
+          <div class="col col-lg-4">Option ID</div>
+          <div class="col col-lg-4">Text</div>
+          <div class="col col-lg-4">Option total</div>
+        </div>
+      </div>
+      <div class="card-block">
+        <table class="table table-hover">
+          <%= render @bet.options %>
+        </table>
+      </div>
     </div>
   </div>
 </div>
