Add view button for every displayed Bet
The button takes the user to the appropriate Bet show page.

--- a/app/views/bets/_bet.html.erb
+++ b/app/views/bets/_bet.html.erb
@@ -1,7 +1,14 @@
-<tr>
+<tr class="row view-all-bets">
   <td class="col-md-2"><%= bet.creator_id %></td>
   <td class="col-md-2"><%= bet.created_at %></td>
   <td class="col-md-2"><%= bet.expires_at %></td>
   <td class="col-md-2"><%= bet.bet_total %></td>
-  <td class="col-md-4"><%= bet.bet %></td>
+  <td class="col-md-3"><%= bet.bet %></td>
+  <td class="col-md-1">
+    <%= link_to bet, class: 'btn btn-secondary', role: 'button' do %>
+      <div class="text-center view-button-text">
+        <span>View <i class="fa fa-eye"></i></span>
+      </div>
+    <% end %>
+  </td>
 </tr>
