--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -11,7 +11,7 @@
         <div class="col col-lg-12">
           <table class="table table-hover">
             <thead class="thead-default">
-              <tr>
+              <tr class="row">
                 <th class="col-md-2">Created By</th>
                 <th class="col-md-2">Created at</th>
                 <th class="col-md-2">Expires at</th>
