Highlight selected options
The options can now be selected by clicking the row, instead of the
radio button.

--- a/app/views/bet_options/_bet_option_radio.html.erb
+++ b/app/views/bet_options/_bet_option_radio.html.erb
@@ -1,4 +1,4 @@
-<tr class="row">
+<tr class="row" role="button">
   <td class="col col-lg-2">
     <%= f.radio_button :bet_option_id, bet_option.id %>
     <%= f.label :bet_option, bet_option_counter + 1 %>
