--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="card-block">
-          <table class="table table-hover">
+          <table class="table table-hover table-selectable">
             <thead class="thead-default">
               <tr class="row">
                 <th class="col col-lg-2">#</th>
