Add underscore arrow to Debt amount
Stylistic choice to emphasize the relationship between the debtor
and creditor and to reaffirm the urgency.

--- a/app/views/debts/_debts_per_bet.html.erb
+++ b/app/views/debts/_debts_per_bet.html.erb
@@ -1,5 +1,5 @@
 <hr>
-<div class="row">
+<div class="row debts-displayed-on-bet">
   <div class="col col-lg-6 offset-lg-3">
     <div class="card">
       <div class="card-header text-muted">
