Add Paginator for Bet views
-Added the paginator helper method to index.html.erb for Bet that
renders the pagination panel with given parameters;
-Added display_bets partial that renders all the bets in the bets
instance variable;
-Added bet partial for Bet model;

--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -26,5 +26,12 @@
         </div>
       </div>
     </div>
+    <div class="mt-auto p-2">
+      <div class="row footer">
+        <div class="col col-md-12">
+          <%= paginator %>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
