--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -34,3 +34,23 @@
     </div>
   </div>
 </div>
+
+<hr>
+<div class="row">
+  <div class="col col-lg-6 offset-lg-3">
+    <div class="card">
+      <div class="card-header text-muted">
+        <div class="row">
+          <div class="col col-lg-4">Option ID</div>
+          <div class="col col-lg-4">Text</div>
+          <div class="col col-lg-4">Option total</div>
+        </div>
+      </div>
+      <div class="card-block">
+        <table class="table table-hover">
+          <%= render @bet.options %>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
