--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -5,5 +5,26 @@
       <h4>This page will display all the existing bets (25/page) and allow the user to use custom search criteria.</h4>
     </div>
   </div>
-  <%= render 'bets/display_bets' %>
+  <div class="d-flex flex-column">
+    <div class="p-2">
+      <div class="row">
+        <div class="col col-lg-12">
+          <table class="table table-hover">
+            <thead class="thead-default">
+              <tr>
+                <th class="col-md-2">Created By</th>
+                <th class="col-md-2">Created at</th>
+                <th class="col-md-2">Expires at</th>
+                <th class="col-md-2">Total amount bet</th>
+                <th class="col-md-4">Bet description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= render @bets%>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
