Add button to create BetOption for Bet

--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -76,3 +76,14 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="col col-lg-6 offset-lg-3">
+    <div class="card">
+      <div class="card-block text-center">
+        <span>Your option is not on the list?</span>
+        <%= link_to 'Add it now!', new_bet_bet_option_path(@bet) %>
+      </div>
+    </div>
+  </div>
+</div>
