--- a/app/views/shared/_bet_display.html.erb
+++ b/app/views/shared/_bet_display.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="card-footer text-danger">
-          Expires on: <%= bet.expires_at.strftime('%A, %B %d %Y, %l:%M %P') %>
+          Expires on: <%= bet.expires_at.localtime.strftime('%A, %B %d %Y, %l:%M %P') %>
       </div>
       </div>
     </div>
