Update column bet in view files with description

--- a/app/views/bets/_bet.html.erb
+++ b/app/views/bets/_bet.html.erb
@@ -3,7 +3,7 @@
   <td class="col-md-2"><%= bet.created_at %></td>
   <td class="col-md-2"><%= bet.expires_at %></td>
   <td class="col-md-2"><%= bet.bet_total %></td>
-  <td class="col-md-3"><%= bet.bet %></td>
+  <td class="col-md-3"><%= bet.description %></td>
   <td class="col-md-1">
     <%= link_to bet, class: 'btn btn-secondary', role: 'button' do %>
       <div class="text-center view-button-text">
