--- a/app/views/bets/new.html.erb
+++ b/app/views/bets/new.html.erb
@@ -8,7 +8,7 @@
 
       <div class="form-group">
         <%= f.label 'Enter bet text:' %>
-        <%= f.text_field :bet, class: 'form-control' %>
+        <%= f.text_field :description, class: 'form-control' %>
       </div>
 
       <div class="form-group">
