--- a/app/views/shared/_bet_display.html.erb
+++ b/app/views/shared/_bet_display.html.erb
@@ -8,7 +8,7 @@
         </div>
 
         <div class="class-block">
-          <h5 class="card-text"><%= bet.bet %></h5>
+          <p><h5 class="card-text"><%= bet.description %></h5></p>
         </div>
 
         <div class="card-footer text-danger">
