Add formatting for amount bet
-Now single digit values are padded with another zero.

--- a/app/views/bet_options/_bet_option_radio.html.erb
+++ b/app/views/bet_options/_bet_option_radio.html.erb
@@ -4,5 +4,5 @@
     <%= f.label :bet_option, bet_option_counter + 1 %>
   </td>
   <td class="col col-lg-6"><%= bet_option.option_text %></td>
-  <td class="col col-lg-4">$<%= bet_option.option_total %></td>
+  <td class="col col-lg-4">$<%= format('%.2f', bet_option.option_total) %></td>
 </tr>
