--- a/app/views/user_bets/_user_bet.html.erb
+++ b/app/views/user_bets/_user_bet.html.erb
@@ -1,5 +1,5 @@
 <tr class="row">
   <td class="col col-lg-4"><%= user_bet.user.username %></td>
   <td class="col col-lg-4"><%= user_bet.bet.options.index(user_bet.bet_option) + 1 %></td>
-  <td class="col col-lg-4">$<%= user_bet.amount_bet %></td>
+  <td class="col col-lg-4">$<%= format('%.2f', user_bet.amount_bet) %></td>
 </tr>
