--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -1,5 +1,17 @@
 <%= render 'shared/bet_display', bet: @bet %>
 
+<% if @bet.creator == current_user %>
+  <hr>
+  <div class="resolve-bet">
+    <div class="row text-center">
+      <div class="col col-lg-12">
+        <%= link_to 'Resolve Bet', resolve_bet_path, class: 'btn btn-success',
+          role: 'button' %>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <div class="display-bet">
   <hr>
   <div class="row">
