--- a/app/views/bets/resolve.html.erb
+++ b/app/views/bets/resolve.html.erb
@@ -1,7 +1,37 @@
 <div class="picking-winning-bet">
   <div class="row">
     <div class="col col-lg-12">
-      <%= form_tag do %>
+      <%= form_tag calculate_debts_path, method: 'POST' do %>
+        <div class="card">
+          <div class="card-header text-muted">
+            <div class="row">
+              <div class="col col-lg-12 text-center">
+                <h4 class="card-header-text">Betting Options</h4>
+              </div>
+            </div>
+          </div>
+          <div class="card-block">
+            <table class="table table-hover table-selectable">
+              <thead class="thead-default">
+                <tr class="row">
+                  <th class="col col-lg-2">#</th>
+                  <th class="col col-lg-6">Description</th>
+                  <th class="col col-lg-4">$ total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @bet.options.each_with_index do |option, index| %>
+                  <%= render 'bet_options/bet_option_radio_resolve', bet_option: option,
+                    bet_option_counter: index %>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+          <div class="card-footer text-center">
+            <%= submit_tag 'Declare the winner!', class: 'btn btn-success btn-full-width',
+              role: 'button' %>
+          </div>
+        </div>
       <% end %>
     </div>
   </div>
