--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -5,97 +5,20 @@
   <div class="resolve-bet">
     <div class="row text-center">
       <div class="col col-lg-12">
-        <%= link_to 'Resolve Bet', resolve_bet_path, class: 'btn btn-success',
-          role: 'button' %>
+        <% if @bet.resolved? %>
+          <div class="text-muted">
+            <h3>This bet has been resolved.</h3>
+          </div>
+        <% else %>
+          <%= link_to 'Resolve Bet', resolve_bet_path, class: 'btn btn-success',
+            role: 'button' %>
+        <% end %>
       </div>
     </div>
   </div>
 <% end %>
 
-<div class="display-bet">
-  <hr>
-  <div class="row">
-    <div class="col col-lg-6 offset-lg-3">
-      <div class="card">
-        <div class="card-header text-muted">
-          <div class="row">
-            <div class="col col-lg-12 text-center">
-              <h4 class="card-header-text">Participants</h4>
-            </div>
-          </div>
-        </div>
-        <div class="card-block">
-          <table class="table table-hover">
-            <thead class="thead-default">
-              <tr class="row">
-                <th class="col col-lg-4">Username</th>
-                <th class="col col-lg-4">Option #</th>
-                <th class="col col-lg-4">Amount</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= render @bet.user_bets %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-  <div class="row">
-    <div class="col col-lg-6 offset-lg-3">
-      <%= form_for [@bet, @user_bet] do |f| %>
-        <div class="card">
-          <div class="card-header text-muted">
-            <div class="row">
-              <div class="col col-lg-12 text-center">
-                <h4 class="card-header-text">Betting Options</h4>
-              </div>
-            </div>
-          </div>
-          <div class="card-block">
-            <table class="table table-hover table-selectable">
-              <thead class="thead-default">
-                <tr class="row">
-                  <th class="col col-lg-2">#</th>
-                  <th class="col col-lg-6">Description</th>
-                  <th class="col col-lg-4">$ total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @bet.options.each_with_index do |option, index| %>
-                  <%= render 'bet_options/bet_option_radio', bet_option: option,
-                    f: f, bet_option_counter: index %>
-                <% end %>
-              </tbody>
-            </table>
-          </div>
-          <div class="card-footer">
-            <div class="form-group">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-usd"></i></span>
-                <%= f.hidden_field :user_id, value: current_user.id %>
-                <%= f.number_field :amount_bet, class: 'form-control money-formatter',
-                  step: :any, placeholder: 'Enter a number, e.g. 10.35' %>
-              </div>
-            </div>
-            <%= f.submit 'Bet!', class: 'btn btn-success btn-full-width',
-              role: 'button' %>
-        </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col col-lg-6 offset-lg-3">
-    <div class="card">
-      <div class="card-block text-center">
-        <span>Your option is not on the list?</span>
-        <%= link_to 'Add it now!', new_bet_bet_option_path(@bet) %>
-      </div>
-    </div>
-  </div>
-</div>
+<% if @bet.resolved? %>
+<% else %>
+  <%= render 'display_unresolved_bets', bet: @bet, user_bet: @user_bet %>
+<% end %>
